--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ section#lettres{
     .book{
        width:300px;
        display:inline-block;
-       text-align:justify;
+       text-align:center;
        margin:1em;
        padding-bottom:0.5em;
        padding-top:1em;
